Range and Switch flag for Cycle tiem trend KPI